修复一些警告